# aoc2025

./: .gitattributes  .gitignore  README.md  get-inputs
hs/: LICENSE  aoc2025.cabal
hs/app/: Main.hs
hs/bench/: Main.hs
hs/src/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
hs/src/Data/Map/: Extra.hs
kt/: build.gradle.kts  settings.gradle.kts
kt/src/bench/kotlin/com/github/ephemient/aoc2025/: Day11Bench.kt  Day1Bench.kt  Day2Bench.kt  Day3Bench.kt  Day4Bench.kt  Day5Bench.kt  Day6Bench.kt  Day7Bench.kt  Day8Bench.kt  Day9Bench.kt
kt/src/main/kotlin/com/github/ephemient/aoc2025/: Day1.kt  Day11.kt  Day2.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt  IntervalSet.kt  Main.kt
py/: .envrc  pyproject.toml
py/src/aoc2025/: cli.py  day1.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
py/tests/: benchmark.py
rs/: Cargo.toml
rs/src/: day1.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
