cabal-version: 3.0
name: aoc2025
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
maintainer: ephemient@gmail.com
author: Daniel Lin
homepage: https://github.com/ephemient/aoc2025/tree/main/hs
synopsis:
  Please see the README on GitHub at <https://github.com/ephemient/aoc2025/blob/main/README.md>

category: None

source-repository head
  type: git
  location: https://github.com/ephemient/aoc2025.git
  subdir: hs

library
  exposed-modules:
    Day1
    Day10
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  hs-source-dirs: src
  default-language: GHC2024
  ghc-options: -Wall
  build-depends:
    base ^>=4.21.0.0,
    containers ^>=0.7,
    process ^>=1.6.25.0,
    split ^>=0.2.5,
    temporary ^>=1.3,
    text ^>=2.1.3,
    vector ^>=0.13.2.0,
    vector-algorithms ^>=0.9.1.0,

executable aoc2025
  main-is: Main.hs
  c-sources: app/cbits/main.c
  hs-source-dirs: app
  default-language: GHC2024
  ghc-options:
    -Wall
    -no-hs-main
    -threaded

  build-depends:
    aoc2025,
    base ^>=4.21.0.0,
    containers ^>=0.7,
    filepath ^>=1.5.4.0,
    text ^>=2.1.3,

benchmark aoc2025-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  c-sources: bench/cbits/main.c
  build-depends:
    aoc2025,
    base ^>=4.21.0.0,
    criterion ^>=1.6.4.0,
    filepath >=1.5.4.0,
    text ^>=2.1.3,

  ghc-options:
    -no-hs-main
    -threaded

  default-language: GHC2024
